import "profile.proto";


package protocol;

message login_req
{
	required int32 id = 1;
	repeated int32 item = 2;
};

message login_rsp
{
	required S.PProfile profile = 1;
};

